--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 #logo {
     margin: 0px;
     padding: 8px;
-    font-family: Garamond, sans-serif;
+    font-family: Garamond, serif;
 }
 
 ul {
