--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 #logo {
     margin: 0px;
     padding: 8px;
-    font-family: Baskervville, serif;
+    font-family: "Great Vibes",Baskervville, serif;
 }
 
 ul {
@@ -19,7 +19,7 @@ ul {
 }
 
 body > header {
-    background-color: rgb(249, 232, 198);
+    background-color: rgb(180, 206, 184);
     color: rgb(21, 2, 13);
     display: flex;
     height: 10vh;
