--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body > header {
 }
 
 body > header > nav > ul {
-    font-family: "Urbanist" ;
+    font-family: "Urbanist Thin 100" ;
     list-style: none;
     text-decoration: none;
 }
