--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     margin: 0px;
     padding: 8px;
     font-family: "Great Vibes",Baskervville, serif;
-    font-size: medium;
+    font-size:xx-large;
 }
 
 ul {
