--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body > header > nav > ul {
 }
 
 body > main article {
+    font-family: "Urbanist Thin 100" ;
     width: 70%;
     margin: auto;
 }
