--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ body > footer {
     background-color: rgb(180, 206, 184);
     display: flex;
     font-family: "Great Vibes",Baskervville, serif;
+    padding: 8px;
 }
 
 img {
