--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ img {
 #footer-ul {
     display: flex;
     list-style: none;
-    text-align: right;
+    text-align: left;
 }
 
 #footer-ul > div > li {
