--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ form {
 
 h2 {
     text-align: center;
-    font-family: "Urbanist" ;
+    font-family: "Great Vibes",Baskervville, serif;
 }
 
 body > footer {
