--- a/style.css
+++ b/style.css
@@ -73,14 +73,14 @@ form {
 
 h2 {
     text-align: center;
-    font-family: "Great Vibes",Baskervville, serif;
+    font-family: "Urbanist";
 }
 
 body > footer {
     background-color: rgb(180, 206, 184);
     display: flex;
     text-align: left;
-    font-family: "Great Vibes",Baskervville, serif;
+    font-family:"Great Vibes",Baskervville, serif;
     padding: 4px;
 }
 
