--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    font-family:  Helvetica, Arial, sans-serif;
+    font-family:"Urbanist";
     margin: 0px;
     font-size: 1,5vw;
 }
