--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ h2 {
     font-family: "Urbanist";
 }
 
+h3{
+    font-family: "Urbanist";
+}
+
 h5 {
     font-family: "Great Vibes",Baskervville, serif;
     font-size: large;
