--- a/style.css
+++ b/style.css
@@ -86,7 +86,8 @@ h3{
 
 h5 {
     font-family: "Great Vibes",Baskervville, serif;
-    font-size: large;
+    font-size: larger;
+    margin: auto;
 }
 
 body > footer {
@@ -100,6 +101,53 @@ body > footer {
 img {
     border-radius: 50%;
 }
+
+div.gallery {
+    border: 1px solid #ccc;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: auto;
+  }
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+  
+  .responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+  }
+  
+  @media only screen and (max-width: 700px) {
+    .responsive {
+      width: 49.99999%;
+      margin: 6px 0;
+    }
+  }
+  
+  @media only screen and (max-width: 500px) {
+    .responsive {
+      width: 100%;
+    }
+  }
+  
+  .clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 
 #footer-ul {
     display: flex;
