--- a/style.css
+++ b/style.css
@@ -100,8 +100,8 @@ body > footer {
 
 img {
     border-radius: 0%;
-    height: 15px;
-    width: 10px;
+    height: 10%;
+    width: 8%;
 }
 
 div.gallery {
