--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ h3{
 h5 {
     font-family: "Great Vibes",Baskervville, serif;
     font-size: larger;
-    margin: auto;
+    margin: 10%;
 }
 
 body > footer {
