--- a/style.css
+++ b/style.css
@@ -111,8 +111,8 @@ div.gallery {
   }
   
   div.gallery img {
-    width: 100%;
-    height: auto;
+    width: 300px;
+    height: 400px;
   }
   
   div.desc {
